fix: dropdown menu overflow

--- a/resources/styles/base/global.css
+++ b/resources/styles/base/global.css
@@ -14,6 +14,14 @@
       0% 0% no-repeat padding-box;
   }
 
+  #app {
+    padding-top: 80px;
+  }
+
+  .has-modal-open body {
+    overflow: hidden;
+  }
+
   img {
     @apply w-full;
   }
